--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,7 @@ $accent-text-color: hsl(0, 0, 100%);
 
 @import url('https://use.typekit.net/hwf0fzd.css');
 @import "../themes/zola-es-theme/sass/style.scss";
+
+.via {
+    display: inline;
+}
