Update to latest shared theme

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,7 @@ $accent-text-color: hsl(0, 0, 100%);
 .via {
     display: inline;
 }
+
+cta {
+    background-color: darken($main-section-background, 10%);
+}
